update pictures and add go back functionality on mobile

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
     <!-- Preloads -->
-    <link rel="preload" as="image" href="img/logo-content.svg?v=12" type="image/svg+xml">
-    <link rel="preload" as="image" href="img/scroll-down.svg?v=12" type="image/svg+xml">
+    <link rel="preload" as="image" href="img/logo-content.svg?v=13" type="image/svg+xml">
+    <link rel="preload" as="image" href="img/scroll-down.svg?v=13" type="image/svg+xml">
 
     <script>
         // Add this before preload links to determine which image to preload
@@ -474,9 +474,9 @@
     <!-- Stylesheets -->
 
 
-    <link rel="preload" href="styles.css?v=12" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="styles.css?v=13" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
-        <link rel="stylesheet" href="styles.css?v=12">
+        <link rel="stylesheet" href="styles.css?v=13">
     </noscript>
     <link rel="preload" href="src/lite-yt-embed.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -484,7 +484,7 @@
     </noscript>
 
     <!-- Scripts -->
-    <script src="script.js?v=12" defer></script>
+    <script src="script.js?v=13" defer></script>
     <script src="src/lite-yt-embed.js" defer></script>
     <meta name="description"
         content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучаем сальсе, бачате, кизомбе и латино микс с кубинскими преподавателями. Первое занятие бесплатно! Почувствуйте ритм Кубы вместе с нами.">
@@ -497,7 +497,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar">
             <a href="#home" id="logo-header">
-                <img src="img/logo-content.svg?v=12" alt="La Casa de Grei логотип">
+                <img src="img/logo-content.svg?v=13" alt="La Casa de Grei логотип">
             </a>
             <ul class="nav-links">
                 <li><a href="#about">О Нас</a></li>
@@ -626,7 +626,7 @@
                 <a href="#styles" id="cta">Посмотреть стили</a>
             </div>
             <div class="scroll-down">
-                <img src="img/scroll-down.svg?v=12" alt="Прокрутить вниз">
+                <img src="img/scroll-down.svg?v=13" alt="Прокрутить вниз">
                 <p>Прокрутите<br>вниз</p>
             </div>
         </section>
@@ -647,7 +647,7 @@
             <div class="teachers-container">
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/male-teacher.webp?v=12" alt="Инструктор по танцам Грейсьер" loading="lazy"
+                        <img src="img/male-teacher.webp?v=13" alt="Инструктор по танцам Грейсьер" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-1">
@@ -664,7 +664,7 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/female-teacher.webp?v=12" alt="Инструктор по танцам Аньель" loading="lazy"
+                        <img src="img/female-teacher.webp?v=13" alt="Инструктор по танцам Аньель" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-2">
@@ -714,37 +714,37 @@
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub1.webp?v=12" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub1.webp?v=13" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub2.webp?v=12" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub2.webp?v=13" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub3.webp?v=12" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub3.webp?v=13" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub4.webp?v=12" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub4.webp?v=13" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub5.webp?v=12" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub5.webp?v=13" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub6.webp?v=12" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub6.webp?v=13" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub7.webp?v=12" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub7.webp?v=13" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                     </div>
@@ -768,7 +768,7 @@
                 <div class="styles-cards">
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
-                            <img src="img/salsa.webp?v=12" alt="Иконка Сальса" loading="lazy" class="lazy-load">
+                            <img src="img/salsa.webp?v=13" alt="Иконка Сальса" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Сальса Куба</h3>
                         <p>Энергичный кубинский стиль. Круговые движения, сложная работа ног и импровизация под музыку.
@@ -777,24 +777,26 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
-                            <img src="img/bachata.webp?v=12" alt="Иконка Бачата" loading="lazy" class="lazy-load">
+                            <img src="img/bachata.webp?v=13" alt="Иконка Бачата" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Бачата</h3>
                         <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
                         <button class="watch-demo" data-video-id="I_HreSHnrj0">Посмотреть пример</button>
+                        <!-- <button class="watch-demo" data-video-id="oOC-UrwtSkc?si=4bEeEc_AEK048F7X">Посмотреть
+                            пример</button> -->
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
-                            <img src="img/latina.webp?v=12" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
+                            <img src="img/latino.webp?v=13" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Латино Микс</h3>
                         <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
                             ритмов.</p>
-                        <!-- <button class="watch-demo" data-video-id="L7YqNsCbkn8">Смотреть пример</button> -->
+                        <button class="watch-demo" data-video-id="QpYhEPF0QK0">Смотреть пример</button>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Кизомба" role="img">
-                            <img src="img/kizomba.webp?v=12" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
+                            <img src="img/kizomba.webp?v=13" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Кизомба</h3>
                         <p>Плавные шаги и диалог с ритмом. Изоляция бедер, мягкое перемещение веса и акцент на
@@ -1168,7 +1170,7 @@
                 <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank"
                             rel="noopener">Edgar
                             R.N</a></em></p>
-                <img src="img/logo-content.svg?v=12" alt="La Casa de Grei логотип" id="logo-footer">
+                <img src="img/logo-content.svg?v=13" alt="La Casa de Grei логотип" id="logo-footer">
             </div>
             <div class="legal">
                 <p>Индивидуальный предприниматель Коваленко Максим Леонидович</p>
