fix size on footer logo to avoid layout shift

--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,8 @@
                 <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank"
                             rel="noopener">Edgar
                             R.N</a></em></p>
-                <img src="img/logo-content.svg?v=13" alt="La Casa de Grei логотип" id="logo-footer">
+                <img src="img/logo-content.svg?v=13" alt="La Casa de Grei логотип" id="logo-footer"
+                    style="width: 5rem; height: 5rem;">
             </div>
             <div class="legal">
                 <p>Индивидуальный предприниматель Коваленко Максим Леонидович</p>
@@ -1188,7 +1189,7 @@
                 </ul>
             </div>
         </div>
-        <div class="video-modal" aria-hidden="true">
+        <div class="video-modal" aria-hidden="true" style="display: none;">
             <button class="close-modal" aria-label="Закрыть видео">
                 <!-- <svg viewBox="0 0 24 24" width="24" height="24">
                     <path
