remove inline css property for video modal

--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,7 @@
                 </ul>
             </div>
         </div>
-        <div class="video-modal" aria-hidden="true" style="display: none;">
+        <div class="video-modal" aria-hidden="true">
             <button class="close-modal" aria-label="Закрыть видео">
                 <!-- <svg viewBox="0 0 24 24" width="24" height="24">
                     <path
