add phone to contacts

--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,12 @@
                 <p class="bigger-text">Не стесняйтесь писать, звонить и посещать нас. <br>
                     Мы действительно любим общаться с нашими клиентами.</p>
                 <p>
-                    <strong>Email:</strong> <a href="mailto:lacasadegrei@mail.ru">lacasadegrei@mail.ru</a>
+                    <strong>Email:&nbsp</strong> <a href="mailto:lacasadegrei@mail.ru" target="_blank"
+                        rel="noopener">lacasadegrei@mail.ru</a>
+                </p>
+                <p>
+                    <strong>Телефон:&nbsp</strong><a href="tel:+375293575258" target="_blank"
+                        rel="noopener">+375293575258</a>
                 </p>
                 <div class="social-media">
                     <a href="https://www.facebook.com/LaCasaDeGrei?locale=ru_RU" target="_blank" rel="noopener"><img
