add versioning to the lite-yt-embed.js

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 
     <!-- Scripts -->
     <script src="script.js?v=14" defer></script>
-    <script src="src/lite-yt-embed.js" defer></script>
+    <script src="src/lite-yt-embed.js?v=14" defer></script>
     <meta name="description"
         content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучаем сальсе, бачате, кизомбе и латино микс с кубинскими преподавателями. Первое занятие бесплатно! Почувствуйте ритм Кубы вместе с нами.">
     <meta name="keywords"
