--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Casa de Grei - Кубинская школа латиноамериканских танцев в Минске</title>
+    <title>Школа танцев La Casa de Grei: Сальса, Бачата, Латиноамериканские танцы в Минске</title>
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon" />
@@ -488,9 +488,81 @@
     <script src="script.js?v=14" defer></script>
     <script src="src/lite-yt-embed.js?v=14" defer></script>
     <meta name="description"
-        content="Кубинская школа латиноамериканских танцев La Casa de Grei в Минске. Обучаем сальсе, бачате, кизомбе и латино микс с кубинскими преподавателями. Первое занятие бесплатно! Почувствуйте ритм Кубы вместе с нами.">
+        content="Ищете зажигательные латиноамериканские танцы (латина) в Минске? Школа La Casa de Grei приглашает! Уроки Кубинской Сальсы (Касино, Руэда де Касино), Бачаты Соло/Парной, Кизомбы, Латины Соло. Аутентичные кубинские преподаватели. Запишитесь на бесплатное пробное занятие!">
     <meta name="keywords"
-        content="сальса, кубинская сальса, касино, бачата, бачата соло, lady style, леди стайл, латина, latina, соло, кубинские преподаватели, кубинские танцы, кизомба, kizomba, школа танцев, La Casa de Grei, Дом Грея, танцы Минск, Минск, Беларусь">
+        content="школа танцев минск, латиноамериканские танцы минск, латина минск, соло латина минск, сальса минск, кубинская сальса минск, сальса касино минск, руэда де касино минск, парная сальса минск, бачата минск, бачата соло минск, lady style минск, парная бачата минск, кизомба минск, кубинские танцы минск, обучение танцам минск, уроки танцев минск, танцы для взрослых минск, La Casa de Grei, кубинские преподаватели, занятия танцами минск, зумба минск">
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "DanceSchool",
+        "name": "La Casa de Grei",
+        "description": "Школа кубинских и латиноамериканских танцев (латина) La Casa de Grei в Минске. Обучение Кубинской Сальсе (Касино, Руэда де Касино), Бачате Соло (Lady Style) и Парной, Кизомбе, Латине Соло для взрослых. Уроки от настоящих кубинских преподавателей. Бесплатное пробное занятие!",
+        "image": "https://lacasadegrei.by/img/logo-content.svg?v=14",
+        "url": "https://lacasadegrei.by/",
+        "telephone": "+375293575258",
+        "email": "lacasadegrei@mail.ru",
+        "address": [
+        {
+            "@type": "PostalAddress",
+            "streetAddress": "ул. Матусевича, 35г",
+            "addressLocality": "Минск",
+            "addressCountry": "BY"
+        },
+        {
+            "@type": "PostalAddress",
+            "streetAddress": "ул. Тимирязева, 9/10",
+            "addressLocality": "Минск",
+            "addressCountry": "BY"
+        },
+        {
+            "@type": "PostalAddress",
+            "streetAddress": "пр-т Рокоссовского, 44/2",
+            "addressLocality": "Минск",
+            "addressCountry": "BY"
+        }
+        ],
+        "priceRange": "BYN 65 - 240",
+        "openingHoursSpecification": [
+        {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday",
+            "Saturday"
+            ],
+            "opens": "17:00",
+            "closes": "21:00"
+        }
+        ],
+        "knowsAbout": [
+            {"@type": "Thing", "name": "Латиноамериканские танцы"},
+            {"@type": "Thing", "name": "Латина"},
+            {"@type": "Thing", "name": "Кубинская Сальса"},
+            {"@type": "Thing", "name": "Сальса Касино"},
+            {"@type": "Thing", "name": "Руэда де Касино"},
+            {"@type": "Thing", "name": "Бачата"},
+            {"@type": "Thing", "name": "Бачата Соло"},
+            {"@type": "Thing", "name": "Lady Style"},
+            {"@type": "Thing", "name": "Парная Бачата"},
+            {"@type": "Thing", "name": "Кизомба"},
+            {"@type": "Thing", "name": "Латина Соло"}
+        ],
+        "sameAs": [
+        "https://www.facebook.com/LaCasaDeGrei?locale=ru_RU",
+        "https://www.instagram.com/la_casa_de_grei/",
+        "https://vk.com/greisier",
+        "https://www.youtube.com/@lacasadegrei2151"
+        ],
+        "founder": {
+            "@type": "Person",
+            "name": "Грейсьер Мачадо Лопес"
+        }
+    }
+    </script>
 </head>
 
 <body>
@@ -498,7 +570,8 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar">
             <a href="#home" id="logo-header">
-                <img src="img/logo-content.svg?v=14" alt="La Casa de Grei логотип">
+                <img src="img/logo-content.svg?v=14"
+                    alt="Логотип школы латиноамериканских танцев La Casa de Grei Минск">
             </a>
             <ul class="nav-links">
                 <li><a href="#about">О Нас</a></li>
@@ -520,7 +593,7 @@
         <button class="floating-contact-button" aria-expanded="false">
             <span class="contact-text">Связаться с нами</span>
             <span class="contact-text-short">Связаться</span>
-            <img class="contact-icon" src="img/contacts-display.svg" alt="">
+            <img class="contact-icon" src="img/contacts-display.svg" alt="Иконка контактов">
             <div class="contact-menu-container">
                 <ul class="contact-menu" aria-label="Contact Options">
                     <li><a href="https://t.me/machadolopezirina" target="_blank" rel="noopener"><img
@@ -536,8 +609,8 @@
 
         <section id="home" class="container-full" aria-labelledby="home-heading">
             <div class="parallax-container">
-                <img class="parallax-img" alt="Background" data-src-mobile="img/home-mobile-full.webp"
-                    data-src-desktop="img/home-desktop-full.webp"
+                <img class="parallax-img" alt="Фон - танцующая пара в стиле латина"
+                    data-src-mobile="img/home-mobile-full.webp" data-src-desktop="img/home-desktop-full.webp"
                     data-placeholder-mobile="img/home-mobile-placeholder.webp"
                     data-placeholder-desktop="img/home-desktop-placeholder.webp">
                 <script>
@@ -627,16 +700,13 @@
                 <a href="#styles" id="cta">Посмотреть стили</a>
             </div>
             <div class="scroll-down">
-                <img src="img/scroll-down.svg?v=14" alt="Прокрутить вниз">
+                <img src="img/scroll-down.svg?v=14" alt="Иконка прокрутки вниз">
                 <p>Прокрутите<br>вниз</p>
             </div>
         </section>
 
         <section id="about" class="container-full" aria-labelledby="about-heading">
             <h2>О нас</h2>
-            <!-- <p class="bigger-text">Кубинская школа латиноамериканских танцев в центре Минска.
-                Профессиональные танцоры из Кубы передают мастерство и знакомят с
-                культурой своей родины.</p> -->
             <p class="bigger-text"><em>¡Hola!</em> Я Грей, профессиональный танцор из Кубы. Вместе с командой мы открыли
                 в Минске
                 школу <em>La Casa de Grei</em> (Дом Грея), где обучаем зажигательным танцам солнечной Кубы. Мы помогаем
@@ -682,7 +752,8 @@
                 <lite-youtube videoid="K1ultgU_QXA" title="Белорусский кубинец: о любви и билете в Беларусь">
                     <div class="image-placeholder" aria-label="Белорусский кубинец: о любви и билете в Беларусь"
                         role="img">
-                        <img src="img/info-placeholder.webp" alt="Белорусский кубинец: о любви и билете в Беларусь"
+                        <img src="img/info-placeholder.webp"
+                            alt="Видео: Грейсьер Мачадо Лопес рассказывает о переезде в Минск и школе танцев"
                             loading="lazy" class="lazy-load">
                     </div>
                     <!-- <a href="https://www.youtube.com/watch?v=K1ultgU_QXA" class="lyt-playbtn" title="Play Video">
@@ -693,7 +764,7 @@
                     title="Фестиваль латиноамериканской культуры в Минске 13-22 октября 2022г">
                     <div class="image-placeholder" aria-label="Участие в фестивале латиноамериканской культуры в
                     Минске" role="img">
-                        <img src="img/festival-placeholder.webp" alt="Участие в фестивале латиноамериканской культуры в
+                        <img src="img/festival-placeholder.webp" alt="Видео: Выступление учеников и преподавателей La Casa de Grei на фестивале латиноамериканской культуры в
                         Минске" loading="lazy" class="lazy-load">
                     </div>
                     <!-- <a href="https://www.youtube.com/watch?v=7m6O2EXk2hE" class="lyt-playbtn" title="Play Video">
