modify calendar to bachata instead of salsa

--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                     </div>
                     <div class="teacher-info-2">
                         <h3>Аньель Эррера Кастильо</h3>
-                        <p>Образование: Национальная школа исскусств p Гаване по специальности: "Танцор современного
+                        <p>Образование: Национальная школа исскусств в Гаване по специальности: "Танцор современного
                             и
                             народного танца".</p>
                     </div>
@@ -1053,7 +1053,7 @@
                             <span class="teacher-name">Грейсьер</span>
                             <div class="class-entry">
                                 <span class="time">18:00</span>
-                                <span class="class-name"><strong>сальса Куба</strong><br><em>(начинающий)</em></span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающий)</em></span>
                             </div>
                             <div class="class-entry">
                                 <span class="time">19:00</span>
@@ -1070,8 +1070,7 @@
                             <span class="teacher-name">Анжель</span>
                             <div class="class-entry">
                                 <span class="time">20:00</span>
-                                <span class="class-name"><strong>бачата соло</strong><br><em>(I и II
-                                        уровень)</em></span>
+                                <span class="class-name"><strong>бачата соло</strong><br><em>(начинающий)</em></span>
                             </div>
                         </div>
                     </div>
