--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
     <!-- Preloads -->
-    <link rel="preload" as="image" href="img/logo-content.svg?v=16" type="image/svg+xml">
-    <link rel="preload" as="image" href="img/scroll-down.svg?v=16" type="image/svg+xml">
+    <link rel="preload" as="image" href="img/logo-content.svg?v=17" type="image/svg+xml">
+    <link rel="preload" as="image" href="img/scroll-down.svg?v=17" type="image/svg+xml">
 
     <script>
         // Add this before preload links to determine which image to preload
@@ -481,9 +481,9 @@
     <!-- Stylesheets -->
 
 
-    <link rel="preload" href="styles.css?v=16" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="styles.css?v=17" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
-        <link rel="stylesheet" href="styles.css?v=16">
+        <link rel="stylesheet" href="styles.css?v=17">
     </noscript>
     <link rel="preload" href="src/lite-yt-embed.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -491,8 +491,8 @@
     </noscript>
 
     <!-- Scripts -->
-    <script src="script.js?v=16" defer></script>
-    <script src="src/lite-yt-embed.js?v=16" defer></script>
+    <script src="script.js?v=17" defer></script>
+    <script src="src/lite-yt-embed.js?v=17" defer></script>
     <meta name="description"
         content="Ищете зажигательные латиноамериканские танцы (латина) в Минске? Школа La Casa de Grei приглашает! Уроки Кубинской Сальсы (Касино, Руэда де Касино), Бачаты Соло/Парной, Кизомбы, Латины Соло. Аутентичные кубинские преподаватели. Запишитесь на бесплатное пробное занятие!">
     <meta name="keywords"
@@ -504,7 +504,7 @@
         "@type": "DanceSchool",
         "name": "La Casa de Grei",
         "description": "Школа кубинских и латиноамериканских танцев (латина) La Casa de Grei в Минске. Обучение Кубинской Сальсе (Касино, Руэда де Касино), Бачате Соло (Lady Style) и Парной, Кизомбе, Латине Соло для взрослых. Уроки от настоящих кубинских преподавателей. Бесплатное пробное занятие!",
-        "image": "https://lacasadegrei.by/img/logo-content.svg?v=16",
+        "image": "https://lacasadegrei.by/img/logo-content.svg?v=17",
         "url": "https://lacasadegrei.by/",
         "telephone": "+375293575258",
         "email": "lacasadegrei@mail.ru",
@@ -576,7 +576,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar">
             <a href="#home" id="logo-header">
-                <img src="img/logo-content.svg?v=16"
+                <img src="img/logo-content.svg?v=17"
                     alt="Логотип школы латиноамериканских танцев La Casa de Grei Минск">
             </a>
             <ul class="nav-links">
@@ -706,7 +706,7 @@
                 <a href="#styles" id="cta">Посмотреть стили</a>
             </div>
             <div class="scroll-down">
-                <img src="img/scroll-down.svg?v=16" alt="Иконка прокрутки вниз">
+                <img src="img/scroll-down.svg?v=17" alt="Иконка прокрутки вниз">
                 <p>Прокрутите<br>вниз</p>
             </div>
         </section>
@@ -724,7 +724,7 @@
             <div class="teachers-container">
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/male-teacher.webp?v=16" alt="Инструктор по танцам Грейсьер" loading="lazy"
+                        <img src="img/male-teacher.webp?v=17" alt="Инструктор по танцам Грейсьер" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-1">
@@ -741,7 +741,7 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/female-teacher.webp?v=16" alt="Инструктор по танцам Аньель" loading="lazy"
+                        <img src="img/female-teacher.webp?v=17" alt="Инструктор по танцам Аньель" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-2">
@@ -792,37 +792,37 @@
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub1.webp?v=16" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub1.webp?v=17" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub2.webp?v=16" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub2.webp?v=17" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub3.webp?v=16" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub3.webp?v=17" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub4.webp?v=16" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub4.webp?v=17" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub5.webp?v=16" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub5.webp?v=17" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub6.webp?v=16" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub6.webp?v=17" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub7.webp?v=16" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub7.webp?v=17" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                     </div>
@@ -846,35 +846,40 @@
                 <div class="styles-cards">
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
-                            <img src="img/salsa.webp?v=16" alt="Иконка Сальса" loading="lazy" class="lazy-load">
+                            <img src="img/salsa.webp?v=17" alt="Иконка Сальса" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Сальса Куба</h3>
                         <p>Энергичный кубинский стиль. Круговые движения, сложная работа ног и импровизация под музыку.
                         </p>
-                        <button class="watch-demo" data-video-id="NsYWJRcVT1I">Посмотреть пример</button>
+                        <div class="button-group">
+                            <button class="watch-demo" data-video-id="NsYWJRcVT1I">Пример</button>
+                        </div>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
-                            <img src="img/bachata.webp?v=16" alt="Иконка Бачата" loading="lazy" class="lazy-load">
+                            <img src="img/bachata.webp?v=17" alt="Иконка Бачата" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Бачата</h3>
                         <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
-                        <button class="watch-demo" data-video-id="I_HreSHnrj0">Посмотреть пример</button>
-                        <!-- <button class="watch-demo" data-video-id="oOC-UrwtSkc?si=4bEeEc_AEK048F7X">Посмотреть
-                            пример</button> -->
+                        <div class="button-group">
+                            <button class="watch-demo" data-video-id="VHpEeIYaahE">Пример соло</button>
+                            <button class="watch-demo" data-video-id="I_HreSHnrj0">Пример в паре</button>
+                        </div>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
-                            <img src="img/latino.webp?v=16" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
+                            <img src="img/latino.webp?v=17" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Латино Микс</h3>
                         <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
                             ритмов.</p>
-                        <button class="watch-demo" data-video-id="QpYhEPF0QK0">Смотреть пример</button>
+                        <div class="button-group">
+                            <button class="watch-demo" data-video-id="QpYhEPF0QK0">Пример</button>
+                        </div>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Кизомба" role="img">
-                            <img src="img/kizomba.webp?v=16" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
+                            <img src="img/kizomba.webp?v=17" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Кизомба</h3>
                         <p>Плавные шаги и диалог с ритмом. Изоляция бедер, мягкое перемещение веса и акцент на
@@ -1252,7 +1257,7 @@
                 <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank"
                             rel="noopener">Edgar
                             R.N</a></em></p>
-                <img src="img/logo-content.svg?v=16" alt="La Casa de Grei логотип" id="logo-footer"
+                <img src="img/logo-content.svg?v=17" alt="La Casa de Grei логотип" id="logo-footer"
                     style="width: 5rem; height: 5rem;">
             </div>
             <div class="legal">
