fix typo on html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             --accent-color-bright: #f7bd00;
             /* Used in contact button */
             --background-color: rgb(0, 0, 0);
-            --text-color: #f3f3logo-heaem;
+            --text-color: #f3f3f3;
             --box-shadow-cta: 0px 4px 8px -4px white;
             --transition-duration-fast: 0.25s;
             /* For parallax image fade-in */
