update youtube channel's name

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         "https://www.facebook.com/LaCasaDeGrei?locale=ru_RU",
         "https://www.instagram.com/la_casa_de_grei/",
         "https://vk.com/greisier",
-        "https://www.youtube.com/@lacasadegrei2151"
+        "https://www.youtube.com/@lacasadegrei"
         ],
         "founder": {
             "@type": "Person",
@@ -1220,7 +1220,7 @@
                             src="img/instagram.svg" alt="Instagram" loading="lazy"></a>
                     <a href="https://vk.com/greisier" target="_blank" rel="noopener"><img src="img/vk.svg" alt="VK"
                             loading="lazy"></a>
-                    <a href="https://www.youtube.com/@lacasadegrei2151" target="_blank" rel="noopener"><img
+                    <a href="https://www.youtube.com/@lacasadegrei" target="_blank" rel="noopener"><img
                             src="img/youtube.svg" alt="Youtube" loading="lazy"></a>
                 </div>
                 <h3>Три зала в Минске:</h3>
