modify calendar alt text

--- a/index.html
+++ b/index.html
@@ -983,11 +983,13 @@
                 <p class="bigger-text">Пробный урок — отличная возможность выбрать свой стиль и начать
                     танцевать.<br>Запись на пробное занятие <strong>обязательна.</strong> В расписании могут быть
                     изменения.</p>
-                <div class="image-placeholder" aria-label="Grei calendar" role="img">
-                    <img src="img/calendar_grei.jpg?v=29" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
+                <div class="image-placeholder" aria-label="Расписание занятий инструктора Грея" role="img">
+                    <img src="img/calendar_grei.jpg?v=29" alt="Расписание занятий инструктора Грея" loading="lazy"
+                        class="lazy-load">
                 </div>
-                <div class="image-placeholder" aria-label="Grei calendar" role="img">
-                    <img src="img/calendar_anyel.jpg?v=29" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
+                <div class="image-placeholder" aria-label="Расписание занятий инструктора Аньель" role="img">
+                    <img src="img/calendar_anyel.jpg?v=29" alt="Расписание занятий инструктора Аньель" loading="lazy"
+                        class="lazy-load">
                 </div>
             </div>
             <div class="spacer"></div>
