remove all versionings on html (?v=)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 
     <!-- Preloads -->
-    <link rel="preload" as="image" href="img/logo-content.svg?v=29" type="image/svg+xml">
-    <link rel="preload" as="image" href="img/scroll-down.svg?v=29" type="image/svg+xml">
+    <link rel="preload" as="image" href="img/logo-content.svg" type="image/svg+xml">
+    <link rel="preload" as="image" href="img/scroll-down.svg" type="image/svg+xml">
 
     <script>
         // Add this before preload links to determine which image to preload
@@ -481,9 +481,9 @@
     <!-- Stylesheets -->
 
 
-    <link rel="preload" href="styles.css?v=29" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
-        <link rel="stylesheet" href="styles.css?v=29">
+        <link rel="stylesheet" href="styles.css">
     </noscript>
     <link rel="preload" href="src/lite-yt-embed.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -491,8 +491,8 @@
     </noscript>
 
     <!-- Scripts -->
-    <script src="script.js?v=29" defer></script>
-    <script src="src/lite-yt-embed.js?v=29" defer></script>
+    <script src="script.js" defer></script>
+    <script src="src/lite-yt-embed.js" defer></script>
     <meta name="description"
         content="Ищете зажигательные латиноамериканские танцы (латина) в Минске? Школа La Casa de Grei приглашает! Уроки Кубинской Сальсы (Касино, Руэда де Касино), Бачаты Соло/Парной, Кизомбы, Латины Соло. Аутентичные кубинские преподаватели. Запишитесь на бесплатное пробное занятие!">
     <meta name="keywords"
@@ -504,7 +504,7 @@
         "@type": "DanceSchool",
         "name": "La Casa de Grei",
         "description": "Школа кубинских и латиноамериканских танцев (латина) La Casa de Grei в Минске. Обучение Кубинской Сальсе (Касино, Руэда де Касино), Бачате Соло (Lady Style) и Парной, Кизомбе, Латине Соло для взрослых. Уроки от настоящих кубинских преподавателей. Бесплатное пробное занятие!",
-        "image": "https://lacasadegrei.by/img/logo-content.svg?v=29",
+        "image": "https://lacasadegrei.by/img/logo-content.svg",
         "url": "https://lacasadegrei.by/",
         "telephone": "+375293575258",
         "email": "lacasadegrei@mail.ru",
@@ -576,8 +576,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar">
             <a href="#home" id="logo-header">
-                <img src="img/logo-content.svg?v=29"
-                    alt="Логотип школы латиноамериканских танцев La Casa de Grei Минск">
+                <img src="img/logo-content.svg" alt="Логотип школы латиноамериканских танцев La Casa de Grei Минск">
             </a>
             <ul class="nav-links">
                 <li><a href="#about">О Нас</a></li>
@@ -706,7 +705,7 @@
                 <a href="#styles" id="cta">Посмотреть стили</a>
             </div>
             <div class="scroll-down">
-                <img src="img/scroll-down.svg?v=29" alt="Иконка прокрутки вниз">
+                <img src="img/scroll-down.svg" alt="Иконка прокрутки вниз">
                 <p>Прокрутите<br>вниз</p>
             </div>
         </section>
@@ -724,7 +723,7 @@
             <div class="teachers-container">
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/male-teacher.webp?v=29" alt="Инструктор по танцам Грейсьер" loading="lazy"
+                        <img src="img/male-teacher.webp" alt="Инструктор по танцам Грейсьер" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-1">
@@ -741,7 +740,7 @@
                 </article>
                 <article class="teacher">
                     <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/female-teacher.webp?v=29" alt="Инструктор по танцам Аньель" loading="lazy"
+                        <img src="img/female-teacher.webp" alt="Инструктор по танцам Аньель" loading="lazy"
                             class="lazy-load">
                     </div>
                     <div class="teacher-info-2">
@@ -792,37 +791,37 @@
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub1.webp?v=29" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub1.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub2.webp?v=29" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub2.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub3.webp?v=29" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub3.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub4.webp?v=29" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub4.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub5.webp?v=29" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub5.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub6.webp?v=29" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub6.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                         <div class="carousel-slide">
                             <div class="image-placeholder" aria-label="Люди танцуют" role="img">
-                                <img src="img/dhub7.webp?v=29" alt="Люди танцуют" loading="lazy" class="lazy-load">
+                                <img src="img/dhub7.webp" alt="Люди танцуют" loading="lazy" class="lazy-load">
                             </div>
                         </div>
                     </div>
@@ -846,7 +845,7 @@
                 <div class="styles-cards">
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
-                            <img src="img/salsa.webp?v=29" alt="Иконка Сальса" loading="lazy" class="lazy-load">
+                            <img src="img/salsa.webp" alt="Иконка Сальса" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Сальса Куба</h3>
                         <p>Энергичный кубинский стиль. Круговые движения, сложная работа ног и импровизация под музыку.
@@ -858,7 +857,7 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
-                            <img src="img/bachata.webp?v=29" alt="Иконка Бачата" loading="lazy" class="lazy-load">
+                            <img src="img/bachata.webp" alt="Иконка Бачата" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Бачата</h3>
                         <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
@@ -869,7 +868,7 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
-                            <img src="img/latino.webp?v=29" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
+                            <img src="img/latino.webp" alt="Иконка Латино Микс" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Латино Микс</h3>
                         <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
@@ -880,7 +879,7 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Кизомба" role="img">
-                            <img src="img/kizomba.webp?v=29" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
+                            <img src="img/kizomba.webp" alt="Иконка Кизомба" loading="lazy" class="lazy-load">
                         </div>
                         <h3>Кизомба</h3>
                         <p>Плавные шаги и диалог с ритмом. Изоляция бедер, мягкое перемещение веса и акцент на
@@ -984,11 +983,11 @@
                     танцевать.<br>Запись на пробное занятие <strong>обязательна.</strong> В расписании могут быть
                     изменения.</p>
                 <div class="image-placeholder" aria-label="Расписание занятий инструктора Грея" role="img">
-                    <img src="img/calendar_grei.jpg?v=29" alt="Расписание занятий инструктора Грея" loading="lazy"
+                    <img src="./calendar_grei.jpg" alt="Расписание занятий инструктора Грея" loading="lazy"
                         class="lazy-load">
                 </div>
                 <div class="image-placeholder" aria-label="Расписание занятий инструктора Аньель" role="img">
-                    <img src="img/calendar_anyel.jpg?v=29" alt="Расписание занятий инструктора Аньель" loading="lazy"
+                    <img src="./calendar_anyel.jpg" alt="Расписание занятий инструктора Аньель" loading="lazy"
                         class="lazy-load">
                 </div>
             </div>
@@ -1087,7 +1086,7 @@
                 <p><em>Создание и продвижение сайта <a href="mailto:ernvk23@gmail.com" target="_blank"
                             rel="noopener">Edgar
                             R.N</a></em></p>
-                <img src="img/logo-content.svg?v=29" alt="La Casa de Grei логотип" id="logo-footer"
+                <img src="img/logo-content.svg" alt="La Casa de Grei логотип" id="logo-footer"
                     style="width: 5rem; height: 5rem;">
             </div>
             <div class="legal">
